feat(home): Added home page and page not found page components

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,10 @@
-<router-outlet />
+@defer {
+  <router-outlet></router-outlet>
+}
+@placeholder {
+    <app-loading></app-loading>
+}
+
+@loading (minimum 2s) {
+  <app-loading></app-loading>
+}
