--- a/src/app/features/auth/pages/login/login.html
+++ b/src/app/features/auth/pages/login/login.html
@@ -1,37 +1,70 @@
-<div class="main-div">
-  <form class="login-form" action="">
-    <div class="logo-div">
-      <img
-        class="google-logo"
-        src="https://1000logos.net/wp-content/uploads/2021/05/Google-logo.png"
-        alt=""
-      />
-    </div>
-    <div class="login-header">
-      <h3>Login</h3>
-    </div>
-    <div class="use-account-text">
-      <p>Use your Google Account</p>
-    </div>
-    <div class="email-input-feild">
-      <input type="email" id="email" placeholder=" " required />
-      <label for="email">Email or phone *</label>
-    </div>
-    <div class="password-input-feild">
-      <input type="password" id="password" placeholder=" " required />
-      <label for="password">Password *</label>
-    </div>
+<div class="login-container">
+  <div class="main-div">
+    <form class="login-form" (submit)="onLoginSubmit($event)">
+      <div class="logo-div">
+        <img
+          class="google-logo"
+          src="https://1000logos.net/wp-content/uploads/2021/05/Google-logo.png"
+          alt="Google"
+        />
+      </div>
+      <div class="login-header">
+        <h3>Sign in</h3>
+      </div>
+      <div class="use-account-text">
+        <p>Use your Google Account</p>
+      </div>
 
-    <div class="forgot-password-div">
-      <a>forgot Password?</a>
-    </div>
-    <div class="botton-div">
-      <div class="left-div-buttom-create-account">
-        <a routerLink="/register">Create account</a>
+      <!-- Error Message -->
+      <div class="message-box error" *ngIf="errorMessage()">
+        <svg viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"/></svg>
+        <span>{{ errorMessage() }}</span>
       </div>
-      <div class="right-login-button">
-        <button type="submit">Login</button>
+
+      <div class="email-input-feild">
+        <input
+          type="email"
+          id="email"
+          [(ngModel)]="email"
+          name="email"
+          placeholder=" "
+          required />
+        <label for="email">Email *</label>
       </div>
-    </div>
-  </form>
+      <div class="password-input-feild">
+        <input
+          [type]="showPassword ? 'text' : 'password'"
+          id="password"
+          [(ngModel)]="password"
+          name="password"
+          placeholder=" "
+          required />
+        <label for="password">Password *</label>
+      </div>
+
+      <div class="show-password">
+        <input
+          type="checkbox"
+          id="show-password"
+          [checked]="showPassword"
+          (change)="toggleShowPassword()">
+        <label for="show-password">Show password</label>
+      </div>
+
+      <div class="forgot-password-div">
+        <a>Forgot password?</a>
+      </div>
+      <div class="botton-div">
+        <div class="left-div-buttom-create-account">
+          <a routerLink="/register">Create account</a>
+        </div>
+        <div class="right-login-button">
+          <button type="submit" [disabled]="isLoading() || !isFormValid">
+            <span *ngIf="!isLoading()">Sign in</span>
+            <span *ngIf="isLoading()" class="spinner"></span>
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
 </div>
